Bug 416050 - Configure dialog does not show on MacOS
Summary: Configure dialog does not show on MacOS
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: unspecified
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-09 14:05 UTC by Magnus Manske
Modified: 2022-02-26 10:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Magnus Manske 2020-01-09 14:05:57 UTC
Configure dialog does not show


STEPS TO REPRODUCE
1. Click on top bar icon
2. In dropdown menu, click on "Configure"

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
Configuration dialog

SOFTWARE/OS VERSIONS
macOS: 10.14.6 (18G2022)

ADDITIONAL INFORMATION
Nightly KDE connect build, downloaded 2020-01-09
Comment 1 Magnus Manske 2020-01-09 14:27:41 UTC
Update: The dialog opens but in the background, and no app to switch to with CMD-TAB. Clearing the desktop shows the dialog. Still should be fixed.
Comment 2 Bug Janitor Service 2022-02-11 20:43:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/450
Comment 3 Weixuan XIAO 2022-02-26 10:23:25 UTC
Git commit 14543fcba54b56d7715cf6d2b8ebdd102bfb635d by Weixuan Xiao, on behalf of Ryan Adolf.
Committed on 26/02/2022 at 10:23.
Pushed by wxiao into branch 'master'.

Raise configuration window (MacOS bug)

## Summary

I've added a call to [`dialog->raise()`](https://doc.qt.io/qt-5/qwindow.html#raise) when launching the configuration dialog.

This is intended to fix a MacOS bug where the configuration window launches behind other open windows, but this call shouldn't harm operating systems as well.

## Test Plan

### Before:
Configuration dialog launches behind other open windows on MacOS.

### After:
Configuration dialog launches over other open windows on MacOS.

M  +2    -0    indicator/main.cpp

https://invent.kde.org/network/kdeconnect-kde/commit/14543fcba54b56d7715cf6d2b8ebdd102bfb635d